--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,6 +26,12 @@ services:
     ports:
       - "8090:80"
     working_dir: /var/www/html
+    healthcheck:
+      test: [ "CMD", "test", "!", "-f", "/tmp/o3setup-running" ]
+      interval: 5s
+      timeout: 10s
+      retries: 20
+      start_period: 5s
 
   mailpit:
     image: axllent/mailpit
