--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,12 @@ jobs:
 
       - name: Build and start services
         run: |
+          echo 'O3SHOP_CONF_DBUSER="o3shop"' > docker/.env
+          echo 'O3SHOP_CONF_DBPWD="o3shop"'  > docker/.env
+          echo 'O3SHOP_CONF_DBROOT="supersecret"' > docker/.env
+          echo 'O3SHOP_CONF_DBNAME="o3shop"' > docker/.env
+          # Start Docker Compose services
+
           cd docker
           docker-compose up -d --build
           
