--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,44 +1,71 @@
-name: PHPUnit Tests
+name: PHP Tests
 
 on:
   push:
-    branches: ['**']
+    branches: [ main, develop ]
   pull_request:
-    branches: ['**']
+    branches: [ main, develop ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Install Docker Compose
+      - name: Install system dependencies
         run: |
-          sudo curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-          docker-compose --version
+          sudo apt-get update && sudo apt-get install -y \
+            libjpeg-dev \
+            libpng-dev \
+            libfreetype6-dev \
+            libxml2-dev \
+            libcurl4-openssl-dev \
+            libonig-dev \
+            libzip-dev \
+            libssl-dev \
+            zlib1g-dev \
+            libicu-dev \
+            libxslt1-dev \
+            libbz2-dev \
+            libreadline-dev \
+            g++ \
+            unzip \
+            git \
+            nano \
+            wget \
+            default-mysql-client
 
-      - name: Build and start services
+      - name: Setup PHP 8.2
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+          extensions: pdo, pdo_mysql, mysqli, gd, mbstring, curl, bcmath, soap, bz2, intl, opcache, calendar, exif, zip
+          tools: composer:2.2
+          ini-values: |
+            date.timezone=Europe/Berlin
+            memory_limit=11000M
+            upload_max_filesize=100M
+            post_max_size=100M
+            error_reporting=E_ALL
+            display_errors=On
+            log_errors=On
+            error_log=/tmp/php_errors.log
+
+      - name: Enable Apache mod_rewrite (if needed)
         run: |
-          echo 'O3SHOP_CONF_DBUSER="o3shop"' >> docker/.env
-          echo 'O3SHOP_CONF_DBPWD="o3shop"'  >> docker/.env
-          echo 'O3SHOP_CONF_DBROOT="supersecret"' >> docker/.env
-          echo 'O3SHOP_CONF_DBNAME="o3shop"' >> docker/.env
-          # Start Docker Compose services
+          sudo a2enmod rewrite || true
 
-          cd docker
-          docker-compose up -d --build
-          
-          until [ "$(docker inspect --format='{{.State.Health.Status}}' o3shop-app)" == "healthy" ]; do
-            echo 'Waiting for O3-Shop setup to complete...'
-            sleep 10
-          done
-
-      - name: Run PHPUnit tests in container
+      - name: Make entrypoint executable
         run: |
-          docker exec o3shop-app ./run-tests.sh
+          chmod +x docker/entrypoint.sh
 
-      - name: Cleanup
-        if: always()
-        run: docker-compose down -v
+      - name: Execute Docker entrypoint
+        run: |
+          ./docker/entrypoint.sh
+
+      - name: Run tests
+        run: |
+          chmod +x ./run-tests.sh
+          ./run-tests.sh
