--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,9 +2,9 @@ name: PHP Tests
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ "*" ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ "*" ]
 
 jobs:
   test:
