--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,22 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    services:
+      db:
+        image: mysql:8.0
+        env:
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_DATABASE: o3shop
+          MYSQL_USER: o3shop
+          MYSQL_PASSWORD: o3shop
+        ports:
+          - 3306:3306
+        options: >-
+          --health-cmd="mysqladmin ping -h localhost -u root -proot"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=10
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -53,19 +69,59 @@ jobs:
             log_errors=On
             error_log=/tmp/php_errors.log
 
-      - name: Enable Apache mod_rewrite (if needed)
+      - name: Create environment file
         run: |
-          sudo a2enmod rewrite || true
+          cp .env.ci .env
 
-      - name: Make entrypoint executable
+      - name: Wait for MySQL to be ready
         run: |
+          until mysqladmin ping -h 127.0.0.1 -P 3306 -u root -proot --silent; do
+            echo 'Waiting for MySQL to be ready...'
+            sleep 2
+          done
+          echo 'MySQL is ready!'
+
+      - name: Setup database
+        run: |
+          mysql -h 127.0.0.1 -P 3306 -u root -proot -e "
+            CREATE DATABASE IF NOT EXISTS o3shop;
+            GRANT ALL PRIVILEGES ON *.* TO 'o3shop'@'%' IDENTIFIED BY 'o3shop';
+            GRANT ALL PRIVILEGES ON *.* TO 'root'@'%' WITH GRANT OPTION;
+            FLUSH PRIVILEGES;
+          "
+
+      - name: Modify entrypoint script for GitHub Actions
+        run: |
+          # Create a backup of the original entrypoint
+          cp docker/entrypoint.sh docker/entrypoint.sh.backup
+          
+          # Replace DB_HOST="db" with DB_HOST="127.0.0.1"
+          sed -i 's/local DB_HOST="db"/local DB_HOST="127.0.0.1"/g' docker/entrypoint.sh
+          
+          # Make sure the script is executable
           chmod +x docker/entrypoint.sh
+          
+          # Show what changed
+          echo "Entrypoint script modified:"
+          grep -n "DB_HOST" docker/entrypoint.sh || true
 
       - name: Execute Docker entrypoint
+        env:
+          O3SHOP_CONF_DBHOST: 127.0.0.1
+          O3SHOP_CONF_DBNAME: o3shop
+          O3SHOP_CONF_DBUSER: o3shop
+          O3SHOP_CONF_DBPWD: o3shop
+          O3SHOP_CONF_DBROOT: root
         run: |
           ./docker/entrypoint.sh
 
       - name: Run tests
+        env:
+          O3SHOP_CONF_DBHOST: 127.0.0.1
+          O3SHOP_CONF_DBNAME: o3shop_test
+          O3SHOP_CONF_DBUSER: o3shop
+          O3SHOP_CONF_DBPWD: o3shop
+          O3SHOP_CONF_DBROOT: root
         run: |
           chmod +x ./run-tests.sh
           ./run-tests.sh
