--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -83,26 +83,31 @@ jobs:
 
       - name: Install theme
         run: |
+          GREEN='\033[0;32m'
+          BLUE='\033[0;34m'
+          YELLOW='\033[1;33m'
+          RED='\033[0;31m'
+          NC='\033[0m' # No Color
           CURRENT_DIR=$(pwd)
           echo "Current directory: $CURRENT_DIR"
-          log "${YELLOW}Installing Wave theme...${NC}"
+          echo "${YELLOW}Installing Wave theme...${NC}"
     
           # Check if theme is already installed
           if [ -d "source/Application/views/wave" ] && [ "$(ls -A source/Application/views/wave)" ]; then
-            log "Wave theme appears to be already installed, skipping"
+            echo "Wave theme appears to be already installed, skipping"
             return 0
           fi
     
           # Download theme
-          log "Downloading theme from GitHub..."
+          echo "Downloading theme from GitHub..."
           wget -q https://github.com/o3-shop/wave-theme/archive/refs/heads/main.zip -O main.zip || handle_error "Failed to download theme"
     
           # Extract theme
-          log "Extracting theme..."
+          echo "Extracting theme..."
           unzip -q main.zip || handle_error "Failed to extract theme archive"
     
           # Copy theme files
-          log "Copying theme files to appropriate directories..."
+          echo "Copying theme files to appropriate directories..."
           mkdir -p source/out/ || handle_error "Failed to create out directory"
           cp -r wave-theme-main/out/* source/out/ || handle_error "Failed to copy theme out files"
     
@@ -111,11 +116,11 @@ jobs:
           cp -r wave-theme-main/* source/Application/views/wave || handle_error "Failed to copy theme view files"
     
           # Clean up
-          log "Cleaning up temporary files..."
+          echo "Cleaning up temporary files..."
           rm -rf wave-theme-main
           rm main.zip
     
-          log "${GREEN}Wave theme installed successfully${NC}"
+          echo "${GREEN}Wave theme installed successfully${NC}"
 
       - name: Run tests
         env:
