--- a/.env.ci
+++ b/.env.ci
@@ -3,7 +3,7 @@
 
 ### required
 ## Database
-O3SHOP_CONF_DBHOST="db"
+O3SHOP_CONF_DBHOST="127.0.0.1"
 O3SHOP_CONF_DBPORT="3306"
 O3SHOP_CONF_DBNAME="o3shop"
 O3SHOP_CONF_DBUSER="o3shop"
