--- a/.env.ci
+++ b/.env.ci
@@ -5,9 +5,9 @@
 ## Database
 O3SHOP_CONF_DBHOST="127.0.0.1"
 O3SHOP_CONF_DBPORT="3306"
-O3SHOP_CONF_DBNAME="o3shop"
-O3SHOP_CONF_DBUSER="o3shop"
-O3SHOP_CONF_DBPWD="o3shop"
+O3SHOP_CONF_DBNAME="o3shop_test"
+O3SHOP_CONF_DBUSER="root"
+O3SHOP_CONF_DBPWD="root"
 O3SHOP_CONF_DBROOT="supersecret"
 
 
