--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,9 @@
         "incenteev/composer-parameter-handler": "~v2.0",
         "o3-shop/shop-ide-helper": "^v1.0.0",
         "squizlabs/php_codesniffer": "^3.5.4",
-        "phpspec/prophecy": "^1.22"
+        "phpspec/prophecy": "^1.22",
+        "rector/rector": "^2.1",
+        "phpspec/prophecy-phpunit": "^2.4"
     },
     "autoload": {
         "psr-4": {
