--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -143,7 +143,7 @@ jobs:
           $CURRENT_DIR/tests/Unit \
           --colors=always \
           --coverage-clover="$CURRENT_DIR/coverage.xml" \
-          --coverage-html="$CURRENT_DIR/coverage-html/" 
+          --coverage-html="$CURRENT_DIR/coverage-html/" \
           --filter testGetEnvVar || exit 0
 
       - name: Find coverage files
