--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,5 @@ composer.lock
 /source/out/wave/*
 /var/configuration/shops/1.yaml
 /var/generated/generated_services.yaml
-docker/data
+docker/database/data
+docker/mailpit/data
