--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     environment:
       PATH: /var/www/html/vendor/o3-shop/testing-library/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
     ports:
-      - "8090:80"
+      - "8080:80"
     working_dir: /var/www/html
     healthcheck:
       test: [ "CMD", "test", "!", "-f", "/tmp/o3setup-running" ]
@@ -36,7 +36,7 @@ services:
 
   mailpit:
     image: axllent/mailpit
-    container_name: mailpit
+    container_name: o3shop-mailpit
     restart: unless-stopped
     volumes:
       - ./mailpit/data:/data
@@ -48,4 +48,21 @@ services:
       MP_DATABASE: /data/mailpit.db
       MP_SMTP_AUTH_ACCEPT_ANY: 1
       MP_SMTP_AUTH_ALLOW_INSECURE: 1
+
+  adminer:
+    image: adminer:latest
+    container_name: o3shop-adminer
+    restart: unless-stopped
+    depends_on:
+      - db
+    ports:
+      - "8081:8080"
+    environment:
+      ADMINER_DEFAULT_SERVER: db
+      MYSQL_ROOT_PASSWORD: ${O3SHOP_CONF_DBROOT}
+      MYSQL_DATABASE: ${O3SHOP_CONF_DBNAME}
+      MYSQL_USER: ${O3SHOP_CONF_DBUSER}
+      MYSQL_PASSWORD: ${O3SHOP_CONF_DBPWD}
+
+
 
