--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,6 @@ O3SHOP_CONF_DBUSER="o3shop"
 O3SHOP_CONF_DBPWD="o3shop"
 O3SHOP_CONF_DBROOT="supersecret"
 
-
 ## URL and paths
 O3SHOP_CONF_SHOPURL="http://localhost:8090"
 O3SHOP_CONF_SSLSHOPURL="${O3SHOP_CONF_SHOPURL}"
@@ -22,6 +21,7 @@ O3SHOP_CONF_COMPILEDIR="/var/www/html/source/tmp"
 O3SHOP_CONF_ADMINSSLURL=""
 
 ## MISC
+O3SHOP_CONF_LOG_LEVEL="error" // Log Levels: emergency, alert, critical, error, warning, notice, info, debug
 O3SHOP_CONF_DEBUG=0
 O3SHOP_CONF_ADMINEMAIL=""
 O3SHOP_CONF_SKIPVIEWUSAGE=0
